[UTF-8][Japanese]

*Ver3.5x : 2020/xx/xx

-【httpd】.gitフォルダへのアクセスを禁止しました。
-【httpd】ルートフォルダ内（.httpd.plと同じディレクトリ内）のファイルアクセスを無視するようにしました。
-【Base/System】
--【Compiler】forexecをforeachと書けるようにしました。
--【Compiler】forexec, ifexec（elseなし）の begin を省略できるようにしました。
--【Compiler】"++x"や"y--"等の記述を可能にしました。
--【Auth】ユーザ管理まわりを大幅更新しました。
--【Auth】ログイン失敗sleep（fail_sleep）機能を削除しました。((sleepしたところで複数同時ログインを試みればセキュリティ対策として意味がないため。))
--フォーム処理を更新しました。
-【Fix】.fcgi(socket mode) + Apache + リバースproxy運用時にうまく動作しない。

*Ver3.40a : 2020/03/16

-SpeedyCGI用の起動スクリプトを削除しました。
-mod_perl対応コードを削除しました。
-adiary.fcgiにUNIX domain socketで利用時の調整をしました。関連して、[https://adiary.org/v3man/install2/nginx:Nginxで設定が一部変更]になっています。
-【httpd】パス設定機能を付けました。これにより Reverse Proxy での運用が楽になります。
-【httpd】UNIX domain socketモードを追加しました。
-【Plugin/webpush】通知送信時のステータスcodeを 201 か確認するようにしました。((従来は200番台であることのみ確認していました。))
-【Ver3.40a/Fix】リンク集の設定がうまく表示されない。（[https://adiary.adiary.jp/0419#c1:Thanks to やす]）
-他

*Ver3.34 : 2020/01/18

-【Windows】サービス起動用ラッパーを開発しました。
-【Markdown】記法ヘルパーのリンク挿入をmarkdown形式に変更。
-【Plugin】新着コメントのメール通知に、記事タイトルを表記するよう変更。
-【Fix/Plugin】リンク集等の設定画面を2度目以降開くとエラーになる。
-【Fix/Plugin】2020年のカレンダーの祝日情報が正しくない。（[https://adiary.adiary.jp/0416#c1:Thanks to さばぞう]）

*Ver3.33 : 2020/01/09

-記事エクスポートの改善。
-【Fix】アルバムで同じダイアログを2度開けない。
-【Fix】一部のテーマで、アルバム等のフォルダ階層の表示位置が正しくない。

*Ver3.32 : 2019/12/30

-静的出力時に記事一覧や年月別の記事リストを生成する機能を追加。（[https://adiary.adiary.jp/0414#c4:Thanks to Hansen]）
-タグツリー、コンテンツツリーを一括で閉じるボタンを追加。
-【スマホ】ドラッグアンドドロップの操作性を改善しました。
-【Plugin】【ja】カレンダーの祝日（天皇誕生日）を変更しました。
-【記法】script-deferブロック記法を追加。
-【記法/Fix】Google画像検索等のURLを変更しました((過去記事に対しては、ブログ記事の再構築が必要です。))。（[https://adiary.adiary.jp/0414#c7:Thanks to jimba]）
-【Fix】ブログ一覧のテーブル表示でソートカラムを選択すると画面が切り替わる。

*Ver3.31d : 2019/11/24

-adiary.jsをリファクタリングしました。
--jQuery等のjsライブラリとまとめて、adiary.min.js に minify しました。
--テキストボックスのリサイズ等いくつか機能を削除しました。
--dailogを自作して、jQuery UIへの依存度を下げました。
-テーマ、CSS関連
--ui-iconをJavaScriptで生成するよう変更（pub-dist/ui-icon/ 画像ファイルを削除）
--別で読み込んでいた Lightbox.css を削除し、関連画像のロードも減らしました。