@@ -1,5 +1,5 @@
 ################################################################################
-データベースシステム説明書	Version 2.05	2020/04/28
+データベースシステム説明書	Version 2.10	2020/05/21
 ################################################################################
 					Copyright(C)2010-2020 nabe@abk
 [TAB=8]
@@ -441,11 +441,21 @@ $dbh = $self->load_dbh();
 ================================================================================
 ●prepare
 ================================================================================
-$dbh = $self->prepare();
+$sth = $self->prepare();
 
 	DBIに対し prepare を発行し戻り値を得ます。
 	特定のDBMを使用する場合以外は使用しないでください。
 
+================================================================================
+●再接続
+================================================================================
+$self->reconnect( $flag );
+
+	$flag …… 1 の場合、強制再接続します。
+
+	DB と接続が切れている場合、再接続します。
+	接続が切れていなければ何もしません。
+	DBI環境以外でも実装されますが、何も処理しません。
 
 ################################################################################
 ■（特殊）SQL関数
