@@ -43,7 +43,7 @@ sub insert {
 
 	# SQL 発行
 	my $sql = "INSERT INTO $table($cols) VALUES($vals)";
-	my $sth = $dbh->prepare($sql);
+	my $sth = $dbh->prepare_cached($sql);
 	$self->debug($sql);	# debug-safe
 	$sth && $sth->execute(@ary);
 	if (!$sth || $dbh->err) {
@@ -69,7 +69,7 @@ sub generate_pkey {
 
 	# ダミーデータを挿入し削除する
 	my $sql = "INSERT INTO $table() VALUES()";
-	my $sth = $dbh->prepare($sql);
+	my $sth = $dbh->prepare_cached($sql);
 	$self->debug($sql);	# debug-safe
 	$sth && $sth->execute();
 	if (!$sth || $dbh->err) {
@@ -83,7 +83,7 @@ sub generate_pkey {
 
 	# 挿入データの削除
 	$sql = "DELETE FROM $table WHERE pkey=$pkey";
-	$sth = $dbh->prepare($sql);
+	$sth = $dbh->prepare_cached($sql);
 	$self->debug($sql);	# debug-safe
 	$sth && $sth->execute();
 
@@ -125,7 +125,7 @@ sub update_match {
 
 	# SQL 発行
 	my $sql = "UPDATE $table SET $cols$where";
-	my $sth = $dbh->prepare($sql);
+	my $sth = $dbh->prepare_cached($sql);
 	$self->debug($sql);	# debug-safe
 	$sth && $sth->execute( @ary );
 	if (!$sth || $dbh->err) {
@@ -152,7 +152,7 @@ sub delete_match {
 
 	# SQL 発行
 	my $sql = "DELETE FROM $table$where";
-	my $sth = $dbh->prepare($sql);
+	my $sth = $dbh->prepare_cached($sql);
 	$self->debug($sql);	# debug-safe
 	$sth && $sth->execute( @ary );
 	if (!$sth || $dbh->err) {
@@ -219,7 +219,7 @@ sub select_by_group {
 	# SQLを発行
 	#---------------------------------------------
 	my $sql = "SELECT $sel$group_col FROM $table$where$group_by$order_by";
-	my $sth = $dbh->prepare($sql);
+	my $sth = $dbh->prepare_cached($sql);
 	$self->debug($sql);	# debug-safe
 	$sth && $sth->execute(@$ary);
 	if (!$sth || $dbh->err) {
@@ -323,7 +323,7 @@ sub do_sql {
 	my $err_f = 1;						# エラー表示フラグ
 	if ($sql =~ /^\d$/) { $err_f=$sql; $sql=shift; }	# エラー表示なし
 
-	my $dbh   = $self->{dbh};
+	my $dbh = $self->{dbh};
 	$self->debug($sql);	# debug-safe
 	my $sth = $dbh->prepare($sql);
 	$sth && $sth->execute(@_);
