@@ -46,7 +46,7 @@ sub insert {
 	# SQL 発行
 	$self->utf8_on(\@ary);
 	my $sql = "INSERT INTO $table($cols) VALUES($vals)";
-	my $sth = $dbh->prepare($sql);
+	my $sth = $dbh->prepare_cached($sql);
 	$self->debug($sql);	# debug-safe
 	$sth && $sth->execute(@ary);
 	if (!$sth || $dbh->err) {
@@ -66,7 +66,7 @@ sub insert {
 
 	# 成功した場合 pkey を返す
 	$sql = "SELECT lastval()";
-	$sth = $dbh->prepare($sql);
+	$sth = $dbh->prepare_cached($sql);
 	$sth && $sth->execute();
 	if (!$sth || $dbh->err) {
 		$self->error($sql);
@@ -87,7 +87,7 @@ sub generate_pkey {
 
 	# 成功した場合 pkey を返す
 	my $sql = "SELECT nextval(pg_catalog.pg_get_serial_sequence('$table', 'pkey'))";
-	my $sth = $dbh->prepare($sql);
+	my $sth = $dbh->prepare_cached($sql);
 	$sth && $sth->execute();
 	if (!$sth || $dbh->err) {
 		$self->error($sql);
@@ -133,7 +133,7 @@ sub update_match {
 	# SQL 発行
 	$self->utf8_on(\@ary);
 	my $sql = "UPDATE $table SET $cols$where";
-	my $sth = $dbh->prepare($sql);
+	my $sth = $dbh->prepare_cached($sql);
 	$self->debug($sql);	# debug-safe
 	$sth && $sth->execute( @ary );
 	if (!$sth || $dbh->err) {
@@ -161,7 +161,7 @@ sub delete_match {
 	# SQL 発行
 	$self->utf8_on(\@ary);
 	my $sql = "DELETE FROM $table$where";
-	my $sth = $dbh->prepare($sql);
+	my $sth = $dbh->prepare_cached($sql);
 	$self->debug($sql);	# debug-safe
 	$sth && $sth->execute( @ary );
 	if (!$sth || $dbh->err) {
@@ -228,7 +228,7 @@ sub select_by_group {
 	# SQLを発行
 	#---------------------------------------------
 	my $sql = "SELECT $sel FROM $table$where$group_by$order_by";
-	my $sth = $dbh->prepare($sql);
+	my $sth = $dbh->prepare_cached($sql);
 	$self->debug($sql);	# debug-safe
 	$sth && $sth->execute(@$ary);
 	if (!$sth || $dbh->err) {
@@ -335,7 +335,7 @@ sub do_sql {
 	my @ary = @_;
 	$self->utf8_on(\@ary);
 
-	my $dbh   = $self->{dbh};
+	my $dbh = $self->{dbh};
 	$self->debug($sql);	# debug-safe
 	my $sth = $dbh->prepare($sql);
 	$sth && $sth->execute(@ary);
