@@ -41,6 +41,12 @@ sub new {
 
 	return $self;
 }
+#------------------------------------------------------------------------------
+# ●再接続（何もしない）
+#------------------------------------------------------------------------------
+sub reconnect {
+	;
+}
 
 ###############################################################################
 # ■テーブルの操作
